<resources>
    <string name="app_name">Assignment 4</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deleteLBL">DELETE</string>
    <string name="descLbl">Description</string>
    <string name="playBtnLbl">Play Trailer</string>
    <string name="ratingStar">⭐</string>
    <string name="movieBannerLbl">Movie Banner</string>
    <string name="createTirleLbl">Create Movie Data</string>
    <string name="titleEntryLbl">Enter Movie Title</string>
    <string name="titleEnterLbl">Title:</string>
    <string name="descEnterTitleLbl">Enter Description</string>
    <string name="descEntryLbl">Description:</string>
    <string name="imageEnterTitleLbl">Enter Image URL</string>
    <string name="imageEntryLbl"> Image URL:</string>
    <string name="videoEnterTitleLbl">Enter Video Code</string>
    <string name="videoEntryLbl">Video Code:</string>
    <string name="submitLbl">Submit</string>
    <string name="movieYearLbl">Enter Movie Film Year</string>
    <string name="movieYearEntryLbl">Year</string>
</resources>
